[DOM8-52] bugfix noSuchElementException